Fix overflow, pt 2

--- a/app/assets/stylesheets/components/_incoming_deposits_modal.scss
+++ b/app/assets/stylesheets/components/_incoming_deposits_modal.scss
@@ -37,7 +37,6 @@
 
 	@media (min-width: 32em) {
 		grid-template-columns: repeat(2, 1fr);
-		overflow-y: auto;
 	}
 }
 
